--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,14 @@ spring:
       host: localhost
       port: 6379
       password:
+
+
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
+
+
+file:
+  upload-dir: src/main/resources/static/uploads
