--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     redis:
       host: ${REDIS_HOST}
       port:  ${REDIS_PORT}
-      password:
+      password: ${REDIS_PASSWORD}
   servlet:
     multipart:
       enabled: true
