fix : deploy.yml 파일 설정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
           echo "REDIS_PORT=${{ secrets.REDIS_PORT }}" >> $GITHUB_ENV
           echo "REDIS_HOST=${{ secrets.REDIS_HOST }}" >> $GITHUB_ENV
           echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> $GITHUB_ENV
-          echo "FIREBASE_SERVICE_ACCOUNT_KEY='${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}'" >> $GITHUB_ENV
+          echo "FIREBASE_SERVICE_ACCOUNT_KEY=$(echo ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }} | base64 --decode)" >> $GITHUB_ENV
           echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> $GITHUB_ENV
           echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> $GITHUB_ENV
 
@@ -70,7 +70,7 @@ jobs:
             export DB_PASSWORD=${{ secrets.DB_PASSWORD }}
             export CLIENT_ID=${{ secrets.CLIENT_ID }}
             export CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}
-            export FIREBASE_SERVICE_ACCOUNT_KEY='${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }}'
+            export FIREBASE_SERVICE_ACCOUNT_KEY=$(echo ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }} | base64 --decode)
             export JWT_SECRET=${{ secrets.JWT_SECRET }}
             export REDIS_HOST=${{ secrets.REDIS_HOST }}
             export REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
