--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,20 +20,6 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Set up environment variables
-        run: |
-          echo "DB_HOST=${{ secrets.DB_HOST }}" >> $GITHUB_ENV
-          echo "DB_PORT=${{ secrets.DB_PORT }}" >> $GITHUB_ENV
-          echo "DB_NAME=${{ secrets.DB_NAME }}" >> $GITHUB_ENV
-          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> $GITHUB_ENV
-          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
-          echo "REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}" >> $GITHUB_ENV
-          echo "REDIS_PORT=${{ secrets.REDIS_PORT }}" >> $GITHUB_ENV
-          echo "REDIS_HOST=${{ secrets.REDIS_HOST }}" >> $GITHUB_ENV
-          echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> $GITHUB_ENV
-          echo "FIREBASE_SERVICE_ACCOUNT_KEY=$(echo ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }} | base64 --decode)" >> $GITHUB_ENV
-          echo "CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}" >> $GITHUB_ENV
-          echo "CLIENT_ID=${{ secrets.CLIENT_ID }}" >> $GITHUB_ENV
 
       - name: Build with Gradle
         run: ./gradlew build -x test  # 필요에 따라 테스트를 포함하도록 변경
@@ -61,7 +47,14 @@ jobs:
           script: |
             cd /home/ubuntu
             rm -rf chalna-server-0.0.1-SNAPSHOT.jar
-            mv ~/spring-boot-app-*.jar /home/ubuntu/chalna-server-0.0.1-SNAPSHOT.jar
+            
+            mkdir downloaded_artifacts
+            cd downloaded_artifacts
+            # Download Artifact
+            curl -L -o spring-boot-app.jar -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" ${{ steps.upload-artifact.outputs.artifact_download_url }}
+            mv spring-boot-app.jar /home/ubuntu/chalna-server-0.0.1-SNAPSHOT.jar
+            
+            echo ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }} | base64 --decode > /home/ubuntu/firebase-config.json
             # 환경 변수 설정
             export DB_HOST=${{ secrets.DB_HOST }}
             export DB_PORT=${{ secrets.DB_PORT }}
@@ -70,11 +63,11 @@ jobs:
             export DB_PASSWORD=${{ secrets.DB_PASSWORD }}
             export CLIENT_ID=${{ secrets.CLIENT_ID }}
             export CLIENT_SECRET=${{ secrets.CLIENT_SECRET }}
-            export FIREBASE_SERVICE_ACCOUNT_KEY=$(echo ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }} | base64 --decode)
             export JWT_SECRET=${{ secrets.JWT_SECRET }}
             export REDIS_HOST=${{ secrets.REDIS_HOST }}
             export REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }}
             export REDIS_POST=${{ secrets.REDIS_PORT }}
+            export FIREBASE_SERVICE_ACCOUNT_KEY="/home/ubuntu/firebase-config.json" 
             
             # JVM 옵션 설정
             export JAVA_OPTS="-Duser.timezone=Asia/Seoul"
