--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   config:
-    import: optional:file:.env[.properties]
+#    import: optional:file:.env[.properties]
+    import: spring.config.import=file:/home/ubuntu/firebase-config.json
   jackson:
     time-zone: Asia/Seoul
   datasource:
