--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -25,19 +25,19 @@ jobs:
         run: ./gradlew build -x test  # 필요에 따라 테스트를 포함하도록 변경
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: spring-boot-app
           path: build/libs/*.jar
 
       - name: Download artifact
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
           name: spring-boot-app
           path: .
 
       - name: Deploy to EC2
-        uses: appleboy/ssh-action@v0.1.4
+        uses: appleboy/ssh-action@vmaster
         with:
 #          github_token: ${{secrets.TOKEN}}
           host: ${{ secrets.EC2_HOST }}
