--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
           path: .
 
       - name: Deploy to EC2
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v0.1.4
         with:
 #          github_token: ${{secrets.TOKEN}}
           host: ${{ secrets.EC2_HOST }}
@@ -48,13 +48,8 @@ jobs:
             cd /home/ubuntu
             rm -rf chalna-server-0.0.1-SNAPSHOT.jar
             
-            mkdir downloaded_artifacts
-            cd downloaded_artifacts
-            # Download Artifact
-            curl -L -o spring-boot-app.jar -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" ${{ steps.upload-artifact.outputs.artifact_download_url }}
-            mv spring-boot-app.jar /home/ubuntu/chalna-server-0.0.1-SNAPSHOT.jar
+            mv spring-boot-app-*.jar /home/ubuntu/chalna-server-0.0.1-SNAPSHOT.jar
             
-            echo ${{ secrets.FIREBASE_SERVICE_ACCOUNT_KEY }} | base64 --decode > /home/ubuntu/firebase-config.json
             # 환경 변수 설정
             export DB_HOST=${{ secrets.DB_HOST }}
             export DB_PORT=${{ secrets.DB_PORT }}
