refactor: MemberInfo -> MemberResponse 이름변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 spring:
   config:
-#    import: optional:file:.env[.properties]
-    import: spring.config.import=file:/home/ubuntu/firebase-config.json
+    import: optional:file:.env[.properties]
   jackson:
     time-zone: Asia/Seoul
   datasource:
