--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
+src/main/resources/application.yml
+
 .idea
 *.iws
 *.iml
@@ -25,6 +27,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+
 
 ### NetBeans ###
 /nbproject/private/
@@ -37,6 +40,8 @@ out/
 .vscode/
 
 .env*
+
+
 
 serviceAccountKey.json
 /src/generated/
