--- a/appspec.yml
+++ b/appspec.yml
@@ -1,11 +1,25 @@
+# appspec.yml
+
 version: 0.0
 os: linux
 
 files:
-  - source: /
-    destination: /home/ubuntu/chalna-bucket-deploy
+  - source:  /
+    destination: /home/ubuntu/app
+    overwrite: yes
+
 permissions:
-  - object: /home/ubuntu/chalna-bucket-deploy
+  - object: /
+    pattern: "**"
     owner: ubuntu
     group: ubuntu
-    mode: 755
+
+hooks:
+  AfterInstall:
+    - location: scripts/stop.sh
+      timeout: 60
+      runas: ubuntu
+  ApplicationStart:
+    - location: scripts/start.sh
+      timeout: 60
+      runas: ubuntu
