--- a/appspec.yml
+++ b/appspec.yml
@@ -28,12 +28,12 @@ version: 0.0
 os: linux
 
 files:
-  - source: build/libs/chalna-server-0.0.1-SNAPSHOT.jar # JAR 파일의 실제 경로
-    destination: /home/ubuntu/app/chalna-server/ # 복사될 위치 (파일 이름은 자동으로 유지됨)
+  - source:  /
+    destination: /home/ubuntu/app/chalna-server
     overwrite: yes
 
 permissions:
-  - object: /home/ubuntu/app/chalna-server
+  - object: /
     pattern: "**"
     owner: ubuntu
     group: ubuntu
@@ -41,9 +41,9 @@ permissions:
 hooks:
   AfterInstall:
     - location: scripts/stop.sh
-      timeout: 60
-      runas: ubuntu
+      timeout: 120
+      runas: root
   ApplicationStart:
     - location: scripts/start.sh
-      timeout: 60
-      runas: ubuntu
+      timeout: 120
+      runas: root
