--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,10 +29,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - run: touch ./src/main/resources/application.properties
-      - run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.properties
-      - run: cat ./src/main/resources/application.properties
-
+#      - run: touch ./src/main/resources/application.properties
+#      - run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.properties
+#      - run: cat ./src/main/resources/application.properties
+      - name: Create application.properties
+        run: |
+         echo "${{ secrets.APPLICATION }}" > application.properties
+         cat ./src/main/resources/application.properties
 
       - name: Run chmod to make gradlew executable
         run: chmod +x ./gradlew
