--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ java {
 
 jar {
     enabled = false
+    from("src/main/resources") {
+        include "application.properties"
+    }
 }
 
 configurations {
