--- a/appspec.yml
+++ b/appspec.yml
@@ -1,24 +1,15 @@
-version: 0.0
-os: linux
-
-files:
-  - source: /
-    destination: /home/ubuntu
-    overwrite: yes
-
-permissions:
-  - object: /
-    pattern: "**"
-    owner: ubuntu
-    group: ubuntu
-
-hooks:
-  AfterInstall:
-    - location: scripts/stop.sh
-      timeout: 60
-      runas: root
-  ApplicationStart:
-    - location: scripts/start.sh
-      timeout: 60
-      runas: root
-
+#version: 0.0
+#os: linux
+#
+#files:
+#  - source: /
+#    destination: /home/ubuntu/cicd
+#    overwrite: yes
+#
+#permissions:
+#  - object: /
+#    pattern: "**"
+#    owner: ubuntu
+#    group: ubuntu
+#
+#
