--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.287'
+
     implementation 'com.google.firebase:firebase-admin:9.3.0'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     compileOnly 'org.projectlombok:lombok'
