--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,8 +51,8 @@ cloud:
       accessKey: ${CLOUD_S3_ACCESSKEY}
       secretKey: ${CLOUD_S3_SECRETKEY}
     s3:
-      bucket: ${CLOUD_AWS_REGION}
+      bucket: ${CLOUD_BUCKET_NAME}
     region:
-      static: ${CLOUD_BUCKET_NAME}
+      static: ${CLOUD_AWS_REGION}
     stack:
       auto: false
