--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.287'
 
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
     implementation 'com.google.firebase:firebase-admin:9.3.0'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
     compileOnly 'org.projectlombok:lombok'
