--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,8 @@ spring:
   data:
     redis:
       host: ${REDIS_HOST}
-      port: ${REDIS_PORT}
+      port: 6379
+#      port: ${REDIS_PORT}
       password: ${REDIS_PASSWORD}
     servlet:
       multipart:
