feat: CICD test 12

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,8 +20,7 @@ spring:
   data:
     redis:
       host: ${REDIS_HOST}
-      port: 6379
-#      port: ${REDIS_PORT}
+      port: ${REDIS_PORT}
       password: ${REDIS_PASSWORD}
     servlet:
       multipart:
